# spotify2tidal

./: README.md  setup.cfg  setup.py  spotify2tidal.py
examples/: archive_discover_weekly.py  config.py  copy_all_albums.py  copy_all_artists.py  copy_all_playlists.py  copy_all_tracks.py  copy_discover_weekly.py
spotify2tidal/: __init__.py  spotify.py  spotify2tidal.py  tidal.py
