[metadata]
name = spotify2tidal
description = "Copy Spotify playlists, saved albums/artists/tracks to Tidal"
long_description = file: README.md
version = 1.0
author = taschenb
author_email = taschenb@posteo.de
url = https://github.com/taschenb/spotify2tidal
license = GPLv3+
keywords = spotify, tidal, discover weekly
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
install_requires =
    spotipy>=2.4.4
    tidalapi>=0.5.0
    requests>=2.11.1
packages = find:
include_package_data = True
